kaatokuvasektio piiloon kunnes valmis

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <li>
                         <a class="page-scroll" href="#videot">Videot</a>
                     </li>
-                    <li>
+                    <!--<li>
                         <a class="page-scroll" href="#kaatokuvia">Kaatokuvia</a>
-                    </li>                    
+                    </li>-->
                     <li>
                         <a class="page-scroll" href="http://dragonlight.miumau.net/forum/">Foorumi</a> 
                     </li>
@@ -276,7 +276,7 @@
     </section>
     
       <!-- historia Section -->
-    <section id="kaatokuvia">
+    <!--<section id="kaatokuvia">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -310,7 +310,7 @@
                     <h4 class="service-heading">Warlords of Draenor</h4><br>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!-- Clients Aside -->
  
