--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
              <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 style="margin-top: 60px;" class="section-heading">Arkistojen helmiä</h2>
-                    <h3 class="section-subheading text-muted">Alla listaa vähän vanhemmista kaadoista. Täysi listä <a href="//www.youtube.com/playlist?list=PLXcEVnoRMxM-rJaQKGrlPN_g6T7rfBCYy">Youtubessa</a>.</h3>
+                    <h3 class="section-subheading text-muted">Alla listaa vähän vanhemmista kaadoista. Täysi lista <a href="//www.youtube.com/playlist?list=PLXcEVnoRMxM-rJaQKGrlPN_g6T7rfBCYy">Youtubessa</a>.</h3>
                 </div>
             </div>
             <div class="row">
