--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">KILTA</h2>
-                    <h3 class="section-subheading text-muted"></h3>
+                    <h3 class="section-subheading text-muted">"Dotteja sinne, niin että munat reiskuu" - Galad</h3>
                 </div>
             </div>
             <div class="row">
